--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,16 +25,16 @@ a {
   }
 }
 
-.panning {
+.floating {
   animation-name: floating;
-  animation-duration: 10s;
+  animation-duration: 5s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
 }
 
-@keyframes panning {
+@keyframes floating {
   0% {transform: translate(0, 0px);}
-  50% {transform: translate(-50px, 0px);}
+  50% {transform: translate(0, 10px);}
   100% {transform: translate(0, 0px);}
 }
 
